<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/long_connect"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/state_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/no_connect"
                android:textSize="25dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/send_msg_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send" />

            <EditText
                android:id="@+id/send_msg_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/received"
                android:textSize="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/receive_msg_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:layout_marginBottom="20dp"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/receive_file_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/darker_gray"
                    android:textSize="25dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/background_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_connect"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/send_file_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send" />

            <TextView
                android:id="@+id/all_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/total" />

            <TextView
                android:id="@+id/has_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_uploaded" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/press_test_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_test" />

            <TextView
                android:id="@+id/has_uploaded_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/number_upload" />

            <TextView
                android:id="@+id/error_uploaded_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_number" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>